# trml

./: CLAUDE.md  Cargo.toml  DEMO.md  README.md  agentic-ai-talk.pptx
profiles/: clickhouse.yml  elasticsearch.yml  gc.yml  kafka.yml  kubernetes.yml  mongodb.yml  nginx.yml  nifi.yml  redis.yml  ssh.yml
src/: config.rs  formatter.rs  hook.rs  hook_bin.rs  learn.rs  main.rs  pipeline.rs  probe.rs  profile.rs
src/stages/: dedup.rs  filter.rs  mod.rs  normalize.rs  profile_stage.rs  stack.rs  strip.rs
tests/: integration.rs
